--- a/Modacity/Modacity/ViewController/Improve/improve.storyboard
+++ b/Modacity/Modacity/ViewController/Improve/improve.storyboard
@@ -433,7 +433,7 @@ to improve?</string>
                                 <rect key="frame" x="0.0" y="470" width="375" height="157"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yeP-au-9km">
-                                        <rect key="frame" x="107.5" y="57.5" width="162" height="43.5"/>
+                                        <rect key="frame" x="106.5" y="57.5" width="162" height="43.5"/>
                                         <string key="text">Start recording your session. 
 Once finished, you’ll be prompted
 to answer a few questions.</string>
@@ -1117,7 +1117,7 @@ you wanted?</string>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOc-S4-3Wh">
-                                <rect key="frame" x="104" y="109" width="170" height="38.5"/>
+                                <rect key="frame" x="103" y="109" width="170" height="38.5"/>
                                 <string key="text">Play all the way through
 til the very end of the…</string>
                                 <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="16"/>
@@ -1262,7 +1262,7 @@ til the very end of the…</string>
                                 <rect key="frame" x="0.0" y="470" width="375" height="157"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UgZ-qT-vAP">
-                                        <rect key="frame" x="107.5" y="57.5" width="162" height="43.5"/>
+                                        <rect key="frame" x="106.5" y="57.5" width="162" height="43.5"/>
                                         <string key="text">Start recording your session. 
 Once finished, you’ll be prompted
 to answer a few questions.</string>
@@ -1560,17 +1560,17 @@ you wanted?</string>
                                             <constraint firstAttribute="trailing" secondItem="rDl-js-Sle" secondAttribute="trailing" id="iLK-Ra-tSg"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rqU-M7-XIk">
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rqU-M7-XIk">
                                         <rect key="frame" x="127" y="107" width="120" height="120.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OCTAVE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdq-ur-Vo9">
-                                                <rect key="frame" x="40" y="19" width="39" height="12"/>
+                                                <rect key="frame" x="-20" y="19" width="39" height="12"/>
                                                 <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="10"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cOt-ch-ZN4" userLabel="labelOctave">
-                                                <rect key="frame" x="42.5" y="42" width="36" height="19"/>
+                                                <rect key="frame" x="-17.5" y="42" width="36" height="19"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="36" id="MsD-H9-fZK"/>
                                                 </constraints>
@@ -1579,14 +1579,14 @@ you wanted?</string>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="52N-E6-Efj" userLabel="octave-">
-                                                <rect key="frame" x="11.5" y="34" width="36" height="36"/>
+                                                <rect key="frame" x="-48.5" y="34" width="36" height="36"/>
                                                 <state key="normal" image="icon_minus"/>
                                                 <connections>
                                                     <action selector="onOctaveDown:" destination="ey2-fW-n4E" eventType="touchUpInside" id="IxS-UT-dAh"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vOB-Th-tBr" userLabel="octave+">
-                                                <rect key="frame" x="73.5" y="34" width="36" height="36"/>
+                                                <rect key="frame" x="13.5" y="34" width="36" height="36"/>
                                                 <state key="normal" image="icon_plus"/>
                                                 <connections>
                                                     <action selector="onOctaveUp:" destination="ey2-fW-n4E" eventType="touchUpInside" id="paM-rq-s51"/>
@@ -1606,7 +1606,7 @@ you wanted?</string>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2fJ-SB-Qde" customClass="ViewDroneFrame" customModule="Modacity" customModuleProvider="target">
-                                        <rect key="frame" x="14" y="60" width="210" height="210"/>
+                                        <rect key="frame" x="14" y="47" width="210" height="210"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oqc-jQ-KYU">
                                                 <rect key="frame" x="35" y="34.5" width="140" height="140.5"/>
@@ -1641,10 +1641,10 @@ you wanted?</string>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="reR-6l-mO4">
-                                        <rect key="frame" x="14" y="277" width="208" height="24"/>
+                                        <rect key="frame" x="10" y="277" width="216" height="24"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DRONE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gjn-T6-AIQ">
-                                                <rect key="frame" x="0.0" y="2" width="40" height="20"/>
+                                                <rect key="frame" x="0.0" y="2" width="36" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="36" id="0ZF-MN-VbC"/>
                                                     <constraint firstAttribute="height" constant="20" id="bIU-x6-6xz"/>
@@ -1654,7 +1654,7 @@ you wanted?</string>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dCc-Qt-fQm">
-                                                <rect key="frame" x="45" y="6" width="50" height="12"/>
+                                                <rect key="frame" x="41" y="6" width="50" height="12"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_min_track" translatesAutoresizingMaskIntoConstraints="NO" id="qF9-dM-GWi">
                                                         <rect key="frame" x="-0.5" y="0.0" width="115" height="12"/>
@@ -1672,13 +1672,13 @@ you wanted?</string>
                                                 </constraints>
                                             </view>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_max_track" translatesAutoresizingMaskIntoConstraints="NO" id="Vub-CX-dwN">
-                                                <rect key="frame" x="45" y="6" width="110" height="12"/>
+                                                <rect key="frame" x="41" y="6" width="126" height="12"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="12" id="TE3-4S-MPI"/>
                                                 </constraints>
                                             </imageView>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="iPR-o4-qH5">
-                                                <rect key="frame" x="43" y="5.5" width="113.5" height="13"/>
+                                                <rect key="frame" x="39" y="5.5" width="129.5" height="13"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="12" id="TSz-rL-bJi"/>
                                                 </constraints>
@@ -1690,7 +1690,7 @@ you wanted?</string>
                                                 </connections>
                                             </slider>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="muY-Gr-RpP">
-                                                <rect key="frame" x="159.5" y="2" width="40" height="20"/>
+                                                <rect key="frame" x="171.5" y="2" width="36" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="36" id="4tH-dN-mtf"/>
                                                     <constraint firstAttribute="height" constant="20" id="UFj-k6-wLr"/>
@@ -1944,7 +1944,7 @@ you wanted?</string>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ce0-fW-BLl">
-                                <rect key="frame" x="104" y="109" width="170" height="38.5"/>
+                                <rect key="frame" x="103" y="109" width="170" height="38.5"/>
                                 <string key="text">Play all the way through
 til the very end of the…</string>
                                 <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="16"/>
